# iaz-bot

./: .gitignore  bot.py  enums.py  errors.py  main.py  pyproject.toml  queue_maker.py  states.py
handlers/: __init__.py  common.py  slider.py
keyboards/: main_menu.py  student.py
