[tool.poetry]
name = "iaz-bot"
version = "0.1.0"
description = ""
authors = ["ewasince <ewasince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.108.0"
oauth2client = "^4.1.3"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"
aiogram = "^3.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
